# duosplit

./: .gitignore  Cargo.toml  README.md  Split-Ha-Oiii.py  build.rs  config.json  cross.sh  script.py
.github/workflows/: build.yml
src/: bindings.rs  cli.rs  config.rs  fit.wgsl  genetics.rs  gpu.rs  main.rs  normal_distr.rs
src/futhark/: alg.fut
