[package]
name = "duohaoii"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
fitrs = "0.5.0"
ndarray = "0.16.1"

[build-dependencies]
futhark-bindgen = { version = "0.2.8", default-features = false, features = ["build"] }
