[package]
name = "duosplit"
version = "0.1.0"
description = "A tool for splitting dual-narrowband hydrogen-alpha and oxygen-III images."
edition = "2021"

[dependencies]
rand = "0.9.2"
fitrs = "0.5.0"
ndarray = "0.16.1"

clap = { version = "4.5.50", features = ["derive"] }

[build-dependencies]
futhark-bindgen = { version = "0.2.8", default-features = false, features = ["build"] }
