[package]
name = "duosplit"
version = "0.3.0"
description = "A tool for splitting dual-narrowband hydrogen-alpha and oxygen-III images."
edition = "2021"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }

rand = "0.9.2"
fitrs = "0.5.0"
ndarray = "0.16.1"

wgpu = "27.0.1"
pollster = { version = "0.4", features = ["macro"] }
flume = "0.11.1"
bytemuck = "1.14"
